[project]
name = "dicom_event_broker_adapter"
version = "0.2.0"
description = "DICOM DIMSE UPS Event to MQTT Broker Adapter"
authors = [{ name = "Stuart Swerdloff", email = "sjswerdloff@gmail.com" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "paho-mqtt>=2.1.0,<3",
    "pydicom>=2.4.4,<3",
    "pynetdicom>=2.1.1,<3",

]

[project.scripts]
dicom_event_broker_adapter = "dicom_event_broker_adapter.ups_event_mqtt_broker_adapter:main"

[dependency-groups]
dev = [
    "pytest>=8.3.2,<9",
    "ruff>=0.11.0,<0.12",
    "tdwii_plus_examples",
]

[tool.uv]

[tool.uv.sources]
tdwii_plus_examples = { git = "https://github.com/sjswerdloff/tdwii_plus_examples.git" }

[tool.hatch.build.targets.sdist]
include = ["dicom_event_broker_adapter"]

[tool.hatch.build.targets.wheel]
include = ["dicom_event_broker_adapter"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
